cloudnative/K8S/K3D/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: llm

spec:
  ingressClassName: nginx

  rules:
    - host: nginx.austsxk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-nginx
                port:
                  number: 80
